# distributed-workloads

./: .golangci.yml  .mergify.yml  .pre-commit-config.yaml  .snyk  AGENTS.md  ARCHITECTURE.md  Makefile  OWNERS  OWNERS_ALIASES  Quick-Start-ODH-V2.md  Quick-Start.md  README.md  codeflare-dsc.yaml  codeflare-stack-kfdef.yaml  distributed-workloads  go.mod  go.sum  rhods-installation.md  util
.claude/: settings.json
.claude/rules/: tests-common-support.md  tests-general.md  tests-trainer.md
.cursor/rules/: add-benchmark.mdc  add-e2e-test.mdc  tests-common-support.mdc  tests-general.mdc  tests-trainer.mdc  update-support-lib.mdc
.github/workflows/: approve-lake-gate.yml  build-and-push-osu-benchmark.yml  build-and-push-test-images-release-branch.yml  build-and-push-test-images.yml  build_tests.yml  go-unit-test.yml  go-vet.yml  notify-autofix-prs.yml  odh-release.yml  release.yaml  snyk-dockerfile-scan.yml  sync-main-to-stable.yml  sync.yml  tag-and-release.yml  universal-image-lockfile-refresh.yaml  use-common-workflow.yaml  verify_generated_files.yml
.mk/: observability.mk
.tekton/: README.md  odh-th06-cpu-torch210-py312-ci-on-pull-request.yaml  odh-th06-cpu-torch210-py312-ci-on-push.yaml  odh-th06-cpu-torch210-py312-ci-on-release-push.yaml  odh-th06-cpu-torch210-py312-pull-request.yaml  odh-th06-cpu-torch210-py312-push.yaml  odh-th06-cpu-torch210-py312-v3-4-push.yaml  odh-th06-cpu-torch291-py312-pull-request.yaml  odh-th06-cpu-torch291-py312-push.yaml  odh-th06-cpu-torch291-py312-release-push.yaml  odh-th06-cuda130-torch210-py312-ci-on-pull-request.yaml  odh-th06-cuda130-torch210-py312-ci-on-push.yaml  odh-th06-cuda130-torch210-py312-ci-on-release-push.yaml  odh-th06-cuda130-torch210-py312-pull-request.yaml  odh-th06-cuda130-torch210-py312-push.yaml  odh-th06-cuda130-torch210-py312-v3-4-push.yaml  odh-th06-cuda130-torch291-py312-pull-request.yaml  odh-th06-cuda130-torch291-py312-push.yaml  odh-th06-cuda130-torch291-py312-release-push.yaml  odh-th06-rocm64-torch291-py312-pull-request.yaml  odh-th06-rocm64-torch291-py312-push.yaml  odh-th06-rocm64-torch291-py312-release-push.yaml  odh-th06-rocm64-torch291-py312-v3-4-push.yaml  odh-training-cpu-torch29-py312-rhel9-pull-request.yaml  odh-training-cpu-torch29-py312-rhel9-push.yaml  odh-training-cuda121-torch24-py311-poc-pull-request.yaml  odh-training-cuda121-torch24-py311-poc-push.yaml  odh-training-cuda121-torch24-py311-pull-request.yaml  odh-training-cuda121-torch24-py311-push.yaml  odh-training-cuda121-torch24-py311-v2-25-push.yaml  odh-training-cuda121-torch24-py311-v3-4-push.yaml  odh-training-cuda124-torch25-py311-poc-pull-request.yaml  odh-training-cuda124-torch25-py311-poc-push.yaml  odh-training-cuda124-torch25-py311-pull-request.yaml  odh-training-cuda124-torch25-py311-push.yaml  odh-training-cuda124-torch25-py311-v2-25-push.yaml  odh-training-cuda124-torch25-py311-v3-4-push.yaml  odh-training-cuda128-torch28-py312-poc-pull-request.yaml  odh-training-cuda128-torch28-py312-poc-push.yaml  odh-training-cuda128-torch28-py312-pull-request.yaml  (+91 more)
benchmarks/kftv2-mpi-ddp-sft/: README.md  mpi-runtime.yaml  train_sft_ddp.py  trainjob.yaml
benchmarks/kftv2-mpi-grpo/: README.md  ds_config_zero3.json  train_grpo.py  trainjob.yaml
benchmarks/kftv2-mpi-sft/: README.md  train_sft.py  trainjob.yaml
benchmarks/osu-benchmarks/: Dockerfile  Dockerfile.cuda  Dockerfile.training  mpi-runtime-cpu.yaml  mpi-runtime-gpu.yaml  osu-trainjob-cpu.yaml  osu-trainjob-gpu.yaml  uid_entrypoint.sh
codeflare-stack/: OWNERS  README.md
codeflare-stack/base/: codeflare-notebook-imagestream.yaml  instascale.yaml  kustomization.yaml  mcad.yaml  params.env
codeflare-stack/rbac/: kustomization.yaml  mcad-controller-ray-clusterrole.yaml  mcad-controller-ray-clusterrolebinding.yaml
contrib/configuration/: basic-dsc.yaml  codeflare-operator-subscription.yaml  ndf-operator-subscription.yaml  nfd-operator-subscription.yaml  nvidia-operator-subscription.yaml  opendatahub-operator-subscription.yaml
examples/hpo-raytune/: README.md
examples/kft-v2/: README.md  trl-gpt2-checkpointing.ipynb
examples/kfto-dreambooth/: README.md  dreambooth.ipynb
examples/kfto-feast/: README.md  kfto_feast.ipynb
examples/kfto-finetune-llm/: full-finetuning.ipynb
hack/: sync-agent-skills.sh  sync-agents-config.sh  sync_agents_config.py  verify-agents-config.sh  verify-imports.sh
images/runtime/: README.md
images/runtime/training/py312-cuda130-torch210-openmpi41/: Dockerfile  Dockerfile.konflux  mpirun_wrapper.sh  pyproject.toml  requirements.txt  rpms.in.yaml  rpms.lock.yaml  uid_entrypoint.sh
images/runtime/training/py312-cuda130-torch210-openmpi41/rpm-repos/: redhat.repo
images/runtime/training/py312-rocm64-torch29-openmpi41/: Dockerfile.konflux  Pipfile  pyproject.toml  requirements.txt  rpms.in.yaml  rpms.lock.yaml  uid_entrypoint.sh
images/runtime/training/py312-rocm64-torch29-openmpi41/rpm-repos/: ubi.repo
images/universal/training/cpu-torch290-py312/: Dockerfile  pylock.toml  pyproject.toml
images/universal/training/rocm64-torch290-py312/: Dockerfile  argfile.konflux.conf  entrypoint-universal.sh  pylock.toml  pyproject.toml  requirements-special.txt
images/universal/training/th04-cuda128-torch290-py312/: Dockerfile  cuda.repo  mellanox.repo  pylock.toml  pyproject.toml  requirements-special.txt
images/universal/training/th05-cpu-torch291-py312/: Dockerfile  pyproject.toml  requirements.txt
images/universal/training/th05-cuda130-torch291-py312/: Dockerfile  cuda.repo  pyproject.toml  requirements.txt
images/universal/training/th05-rocm64-torch291-py312/: Dockerfile  entrypoint-universal.sh  mellanox.repo  pyproject.toml  requirements.txt  rocm.repo
images/universal/training/th06-cpu-torch210-py312/: Dockerfile  Dockerfile.konflux.cpu  entrypoint-universal.sh  pyproject.toml  requirements.txt
images/universal/training/th06-rocm64-torch291-py312/: Dockerfile  Dockerfile.konflux.rocm  entrypoint-universal.sh  pyproject.toml  requirements-ga.txt  requirements.txt
ray/: README.md  quick-start.md
tests/: README.md  go.mod  go.sum
(+615 files in other folders)
