# ROCm Image Python Dependencies
#
# To regenerate pylock.toml:
#   uv pip compile --python-platform=linux --python-version=3.12 \
#     --find-links=https://download.pytorch.org/whl/rocm6.4 \
#     --index-strategy=unsafe-first-match \
#     --output-file=pylock.toml pyproject.toml

[project]
name = "rocm-image"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # ===================================================================
    # BASE IMAGE DEPENDENCIES (from odh-workbench-jupyter-minimal-rocm-py312-ubi9:2025b-v1.39)
    # Versions MUST match exactly to avoid compatibility issues
    # ===================================================================
    
    # JupyterLab Core (exact versions from base image 2025b-v1.39)
    "odh-jupyter-trash-cleanup==0.1.1",
    "jupyterlab==4.4.9",
    "jupyterlab-server==2.28.0",
    "jupyterlab-git==0.51.2",
    "jupyterlab-pygments==0.3.0",
    
    # Jupyter Server and Extensions
    "jupyter-server==2.17.0",
    "jupyter-server-proxy==4.4.0",
    "jupyter-server-terminals==0.5.3",
    "jupyter-server-mathjax==0.2.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    
    # Notebook packages
    "nbdime==4.0.2",
    "nbgitpuller==1.2.2",
    "nbformat==5.10.4",
    "nbconvert==7.16.6",
    "nbclient==0.10.2",
    "notebook-shim==0.2.4",
    
    # IPython and kernel
    "ipython==9.8.0",
    "ipykernel==7.1.0",
    "ipython-pygments-lexers==1.1.1",
    
    # Common shared dependencies (base image versions - updated from 2025b-v1.39)
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "anyio==4.12.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fqdn==1.5.1",
    "frozenlist==1.8.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "lark==1.3.1",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "micropipenv==1.9.0",
    "mistune==3.1.4",
    "multidict==6.7.0",
    "nest-asyncio==1.6.0",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "platformdirs==4.5.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.30.0",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "simpervisor==1.0.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "wheel==0.45.1",
    "yarl==1.22.0",
    
    # ===================================================================
    # ML/AI DEPENDENCIES (from py312-rocm64-torch280)
    # ===================================================================
    
    # PyTorch with ROCm 6.4 (local version suffix)
    "torch==2.9.0+rocm6.4",
    
    # ML Training and Inference Libraries
    "peft==0.17.0",
    "datasets==4.0.0",
    "transformers==4.55.2",
    "accelerate==1.10.0",
    "trl==0.21.0",
    
    # flash-attn is installed separately via requirements-special.txt
    
    # Deep Learning Utilities
    "liger-kernel==0.5.10",
    "einops>=0.8",
    "kernels>=0.9.0",
    "numba==0.61.2",
    "deepspeed>=0.14.3",
    "instructlab-dolomite>=0.1.1",
    
    # Tokenization
    "sentencepiece>=0.1.99,<0.3",
    "tokenizers==0.21.4",
    
    # Core Dependencies
    "numpy>=1.23.5,<2.0.0",
    "tqdm==4.67.1",
    "pydantic>=2.11.7",
    "protobuf>=5.28.0,<6.0.0",
    "simpleeval>=0.9.13,<1.0",
    "safetensors==0.6.2",
    "py-cpuinfo==9.0.0",
    "rich==14.1.0",
    "aiofiles==24.1.0",
    "async-timeout==4.0.3",
    "tensorboard==2.19.0",
    
    # Build tools (needed for flash-attn compilation)
    "ninja",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
# Use ROCm index for torch
index-url = "https://download.pytorch.org/whl/rocm6.4"
extra-index-url = ["https://pypi.org/simple"]

# flash-attn is installed separately via requirements-special.txt (not via pylock)
