[project]
name = "universal-image"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # ===================================================================
    # BASE IMAGE DEPENDENCIES (from workbench-images/pylock.toml)
    # Versions MUST match exactly to avoid compatibility issues
    # ===================================================================
    
    # JupyterLab Core (exact versions from base image)
    "odh-jupyter-trash-cleanup==0.1.1",
    "jupyterlab==4.4.4",
    "jupyterlab-server==2.27.3",
    "jupyterlab-git==0.51.2",
    "jupyterlab-pygments==0.3.0",
    
    # Jupyter Server and Extensions
    "jupyter-server==2.17.0",
    "jupyter-server-proxy==4.4.0",
    "jupyter-server-terminals==0.5.3",
    "jupyter-server-mathjax==0.2.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    
    # Notebook packages
    "nbdime==4.0.2",
    "nbgitpuller==1.2.2",
    "nbformat==5.10.4",
    "nbconvert==7.16.6",
    "nbclient==0.10.2",
    "notebook-shim==0.2.4",
    
    # IPython and kernel
    "ipython==9.5.0",
    "ipykernel==6.30.1",
    "ipython-pygments-lexers==1.1.1",
    
    # Common shared dependencies (base image versions)
    "anyio==4.10.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.5",
    "bleach==6.2.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "debugpy==1.8.16",
    "frozenlist==1.7.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "multidict==6.6.4",
    "packaging==25.0",
    "platformdirs==4.4.0",
    "prometheus-client==0.22.1",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "pycparser==2.23",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "setuptools==80.9.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "websocket-client==1.8.0",
    "wheel==0.45.1",
    "yarl==1.20.1",
    
    # ===================================================================
    # ML/AI DEPENDENCIES (added for universal image)
    # ===================================================================
    
    # PyTorch with CUDA 12.8
    "torch==2.9.0",
    
    # ML Training and Inference Libraries
    "accelerate==1.10.0",
    "transformers==4.57.1",
    "peft==0.17.0",
    "datasets==4.3.0",
    
    # Core Dependencies
    "tqdm==4.67.1",
    "pydantic==2.11.7",
    "aiofiles==24.1.0",
    "aiohttp==3.12.15",
    "deprecated==1.2.18",
    "typer==0.19.2",
    "protobuf>=5.28.0,<6.0.0",
    "simpleeval>=0.9.13,<1.0",
    "safetensors==0.6.2",
    "py-cpuinfo==9.0.0",
    
    # Deep Learning Utilities
    "numba==0.62.1",
    "rich==14.1.0",
    "tensorboard==2.19.0",
    "bitsandbytes==0.48.1",
    "liger-kernel==0.6.2",
    "einops==0.8.1",
    "kernels==0.10.3",
    
    # Tokenization
    "sentencepiece>=0.1.99,<0.3",
    "tokenizers==0.22.1",
    
    # Training Libraries
    "trl==0.21.0",
    "deepspeed==0.14.3",
    
    # Networking
    "async-timeout==4.0.3",
    
    # Model Management
    "hf-xet==1.1.8",
    "huggingface-hub==0.34.4",
    "mlflow==3.4.0",
    
    # Training Frameworks
    "training_hub[lora]==0.4.0",
    "instructlab-training==0.12.1",
    "rhai-innovation-mini-trainer==0.3.0",
    
    # Misc
    "olot",
    
    # Build tools for PyTorch extensions
    "ninja==1.11.1.1",
    "cmake==3.30.0",
    
    # Note: The following packages require special installation and are in
    # requirements-special.txt instead (for Konflux prefetching):
    # - flash-attn==2.8.3
    # - causal-conv1d==1.5.3.post1
    # - mamba-ssm==2.2.6.post3
]

[tool.uv]
# Match the base image settings
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]

# Use custom index for PyTorch CUDA builds
index-url = "https://download.pytorch.org/whl/cu128"
# But still use PyPI for everything else
extra-index-url = ["https://pypi.org/simple"]