# CUDA Universal Image Python Dependencies
#
# To regenerate requirements.txt:
#   uv pip compile --python-platform=linux --python-version=3.12 \
#     --index-url=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.4-EA1/cuda13.0-ubi9-test/simple/ \
#     -o requirements.txt pyproject.toml

[project]
name = "universal-image"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # ===================================================================
    # ML/AI DEPENDENCIES (added on top of base image)
    # Base image deps are NOT listed here - pip install is additive
    # Strict AIPCC-only: all packages must be available in AIPCC index
    # ===================================================================
    
    # PyTorch with CUDA 13.0
    "torch==2.9.1",
    
    # ML Training and Inference Libraries
    "accelerate==1.12.0",
    "transformers>=4.57.0",
    "peft==0.18.1",
    "datasets>=4.1.0",
    
    # Core Dependencies
    "tqdm>=4.67.1",
    "pydantic>=2.11.7",
    "aiofiles==25.1.0",
    "deprecated>=1.2.18",
    "typer>=0.19.2",
    "protobuf>=3.20.0",
    "simpleeval>=0.9.13",
    "safetensors==0.7.0",
    "py-cpuinfo>=9.0.0",
    
    # Deep Learning Utilities
    "numba>=0.61.2",
    "numpy>=2.0.0",
    "rich>=13.9.4",
    "tensorboard==2.20.0",
    "bitsandbytes>=0.48.1",
    "liger-kernel>=0.6.2",
    "einops>=0.8.1",
    "kernels>=0.10.3",
    
    # Tokenization
    "sentencepiece>=0.1.99",
    "tokenizers>=0.22.0",
    
    # Training Libraries
    "trl>=0.24.0",
    "deepspeed>=0.18.4",
    
    # Networking
    "async-timeout==5.0.1",
    
    # Model Management
    "hf-xet>=1.1.8",
    "huggingface-hub>=0.34.4",
    "mlflow>=3.4.0",
    
    # Training Frameworks
    "training_hub[lora]==0.5.0",
    "instructlab-training>=0.13.0",
    "rhai-innovation-mini-trainer>=0.5.0",
    
    # Flash Attention (pre-built wheel from AIPCC)
    "flash-attn==2.8.3",
    
    # Mamba dependencies (pre-built wheels from AIPCC)
    "causal-conv1d>=1.5.3",
    "mamba-ssm>=2.2.6",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
index-url = "https://console.redhat.com/api/pypi/public-rhai/rhoai/3.4-EA1/cuda13.0-ubi9-test/simple/"
