# TH06 ROCm Universal Image Python Dependencies
#
# Strict AIPCC-only builds - ensures consistency with downstream hermetic builds.
# If a package is missing from AIPCC, request it be added rather than using fallback indexes.
#
# To regenerate requirements.txt:
#   uv pip compile --python-platform=linux --python-version=3.12 \
#     --index-url=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.4-EA2/rocm6.4-ubi9-test/simple/ \
#     -o requirements.txt pyproject.toml

[project]
name = "th06-rocm-universal-image"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # ===================================================================
    # ML/AI DEPENDENCIES (added on top of base image)
    # Base image deps are NOT listed here - pip install is additive
    # ===================================================================
    
    # PyTorch
    "torch==2.9.1",
    
    # Triton (GPU kernel compiler)
    "triton==3.5.1",
    
    # xformers (efficient transformers)
    "xformers==0.0.33.post2",
    
    # ML Training and Inference Libraries
    "peft==0.18.1",
    "datasets==4.3.0",
    "transformers==4.57.6",
    "accelerate==1.12.0",
    "trl==0.24.0",
    
    # Deep Learning Utilities
    "einops>=0.8",
    "numba>=0.61.2",
    "deepspeed>=0.18.4",
    "kernels==0.12.1",
    "liger-kernel==0.7.0",
    
    # Tokenization
    "sentencepiece>=0.1.99,<0.3",
    "tokenizers>=0.22.0",
    
    # Core Dependencies
    "numpy>=2.0.0",
    "tqdm>=4.67.1",
    "pydantic>=2.11.7",
    "protobuf>=3.20.0",
    "simpleeval>=0.9.13",
    "safetensors==0.7.0",
    "py-cpuinfo==9.0.0",
    "rich>=13.9.4",
    "aiofiles==25.1.0",
    "async-timeout==5.0.1",
    "tensorboard==2.20.0",
    
    # Training Frameworks
    "training_hub[lora]==0.5.0",
    
    # Kubeflow SDK
    "kubeflow==0.3.0+rhai0",
    
    # Flash Attention (pre-built wheel from AIPCC)
    "flash-attn==2.8.3",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
# Strict AIPCC-only - no fallback indexes
# If a package is missing, request it be added to AIPCC
index-url = "https://console.redhat.com/api/pypi/public-rhai/rhoai/3.4-EA2/rocm6.4-ubi9-test/simple/"
